--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </div>
             <nav>
                 <ul class="navigation-list">
-                    <li class="navigation-list__item"><a href="#">home</a></li>
+                    <li class="navigation-list__item"><a href="#" class="colored">home</a></li>
                     <li class="navigation-list__item"><a href="#">projects</a></li>
                     <li class="navigation-list__item"><a href="#">measurement</a></li>
                     <li class="navigation-list__item"><a href="#">team</a></li>
