Second day commit

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&family=Yeseva+One&display=swap" rel="stylesheet">
     <title>Turnkey Repair</title>
 </head>
@@ -30,7 +30,7 @@
     <main>
         <section class="section-first">
             <div class="container section-first-content">
-                <h1>Turnkey Repair in the<br> 
+                <h1 class="title main-title">Turnkey Repair in the<br> 
                     city of <span class="city-name">Rostov-on-Don</span>
                 </h1>
                 <p class="introduction">Get ready-made turnkey repairs on time<br>
@@ -40,6 +40,56 @@
                 <input class="input-submit" type="submit" value="SUBMIT YOUR APPLICATION">
             </div>
             <div class="section-first-overlay"></div>
+        </section>
+        <section class="section-second">
+            <div class="container section-second-content">
+                <div class="container section-second-left">
+                    <h2 class="title title-large">completed<br>
+                        projects
+                    </h2>
+                    <p class="description intro">Only a small part of the work performed<br>
+                        y our company is presented on the site. For 14 years on in the construction<br>
+                        market we have made happy more than 1000 families
+                    </p>
+                    <div class="description description-columns">
+                        <div class="section-second-left__item1">
+                            <h4 class="title title-small">city:</h4>
+                            <p class="description description-small-font">Rostov-on-Don<br> LCD admiral</p>
+                            <h4 class="title title-small">Repair time:</h4>
+                            <p class="description description-small-font">3.5 months</p>
+                        </div>
+                        <div class="section-second-left__item2">                        
+                            <h4 class="title title-small">apartment area:</h4>
+                            <p class="description description-small-font">81 m2</p>
+                            <h4 class="title title-small title-small__item">Repair Cost:</h4>
+                            <p class="description description-small-font">Upon request</p>
+                        </div>
+                    </div>
+                    <div class="navigation-arrows">
+                        <img src="images/Arrow.png" alt="Arrow" class="navigation-arrows__left-arrow">
+                        <img src="images/Stroke.png" alt="Stroke" class="navigation-arrows__item-stroke">
+                        <img src="images/Dot.png" alt="Dot" class="navigation-arrows__item-dots">
+                        <img src="images/Dot.png" alt="Dot" class="navigation-arrows__item-dots">
+                        <img src="images/Dot.png" alt="Dot" class="navigation-arrows__item-dots">
+                        <img src="images/Stroke.png" alt="Stroke" class="navigation-arrows__item-stroke"> 
+                        <img src="images/Arrow.png" alt="Arrow" class="navigation-arrows__right-arrow">
+                    </div>     
+                </div>
+                <div class="container section-second-right">
+                    <ul class="title yellow-subtitle">
+                        <li class="title yellow-subtitle__item active">Rostov-on-Don, Admiral</li>
+                        <li class="title yellow-subtitle__item">Sochi Thieves</li>
+                        <li class="title yellow-subtitle__item">Rostov-on-Don Patriotic</li>
+                    </ul>
+                    <img src="images/image2.png" width="672px" height="482px" alt="Image2">
+                </div>
+            </div>
+            <div class="webcam-logo">
+                <h3 class="subtitle white-subtitle">online control</h3>
+                <img src="images/Rectangle1.png" alt="Rectangle1">
+                <img src="images/webcam.png" alt="webcam">
+                <img src="images/Rectangle1.png" alt="Rectangle1">
+            </div>
         </section>
     </main>
     <footer></footer>
