--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&family=Yeseva+One&display=swap" rel="stylesheet">
     <title>Turnkey Repair</title>
 </head>
@@ -66,13 +66,13 @@
                         </div>
                     </div>
                     <div class="navigation-arrows">
-                        <img src="images/Arrow.png" alt="Arrow" class="navigation-arrows__left-arrow">
-                        <img src="images/Stroke.png" alt="Stroke" class="navigation-arrows__item-stroke">
-                        <img src="images/Dot.png" alt="Dot" class="navigation-arrows__item-dots">
-                        <img src="images/Dot.png" alt="Dot" class="navigation-arrows__item-dots">
-                        <img src="images/Dot.png" alt="Dot" class="navigation-arrows__item-dots">
-                        <img src="images/Stroke.png" alt="Stroke" class="navigation-arrows__item-stroke"> 
-                        <img src="images/Arrow.png" alt="Arrow" class="navigation-arrows__right-arrow">
+                        <img src="/images/Arrow.png" alt="Arrow" class="navigation-arrows__left-arrow">
+                        <img src="/images/Stroke.png" alt="Stroke" class="navigation-arrows__item-stroke">
+                        <img src="/images/Dot.png" alt="Dot" class="navigation-arrows__item-dots">
+                        <img src="/images/Dot.png" alt="Dot" class="navigation-arrows__item-dots">
+                        <img src="/images/Dot.png" alt="Dot" class="navigation-arrows__item-dots">
+                        <img src="/images/Stroke.png" alt="Stroke" class="navigation-arrows__item-stroke"> 
+                        <img src="/images/Arrow.png" alt="Arrow" class="navigation-arrows__right-arrow">
                     </div>     
                 </div>
                 <div class="container section-second-right">
