--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </div>
             <nav>
                 <ul class="navigation-list">
-                    <li class="navigation-list__item"><a href="#" class="colored">home</a></li>
+                    <li class="navigation-list__item"><a href="#">home</a></li>
                     <li class="navigation-list__item"><a href="#">projects</a></li>
                     <li class="navigation-list__item"><a href="#">measurement</a></li>
                     <li class="navigation-list__item"><a href="#">team</a></li>
@@ -36,8 +36,8 @@
                 <p class="introduction">Get ready-made turnkey repairs on time<br>
                     with work time saving up to 45 days and 20% from<br>
                     cost of materials due to the organization of work</p>
-                <button class="button button-second">CALCULATE THE COST</button>
-                <input class="input-submit" type="submit" value="SUBMIT YOUR APPLICATION">
+                <button class="button button__item">CALCULATE THE COST</button>
+                <input class=" button button__item" type="submit" value="SUBMIT YOUR APPLICATION">
             </div>
             <div class="section-first-overlay"></div>
         </section>
@@ -47,48 +47,50 @@
                     <h2 class="title title-large">completed<br>
                         projects
                     </h2>
-                    <p class="description intro">Only a small part of the work performed<br>
-                        y our company is presented on the site. For 14 years on in the construction<br>
+                    <p class="description intro">Only a small part of the work performed our company is presented<br>
+                        on the site. For 14 years on in the construction<br>
                         market we have made happy more than 1000 families
                     </p>
                     <div class="description description-columns">
-                        <div class="section-second-left__item1">
+                        <div class="description-columns__item">
                             <h4 class="title title-small">city:</h4>
                             <p class="description description-small-font">Rostov-on-Don<br> LCD admiral</p>
-                            <h4 class="title title-small">Repair time:</h4>
-                            <p class="description description-small-font">3.5 months</p>
                         </div>
-                        <div class="section-second-left__item2">                        
+                        <div class="description-columns__item">                        
                             <h4 class="title title-small">apartment area:</h4>
                             <p class="description description-small-font">81 m2</p>
-                            <h4 class="title title-small title-small__item">Repair Cost:</h4>
+                        </div>
+                        <div class="description-columns__item">                       
+                            <h4 class="title title-small">Repair time:</h4>
+                            <p class="description description-small-font">3.5 months</p>
+                        </div>                        
+                        <div class="description-columns__item">
+                            <h4 class="title title-small">Repair Cost:</h4>
                             <p class="description description-small-font">Upon request</p>
                         </div>
                     </div>
                     <div class="navigation-arrows">
-                        <img src="/images/Arrow.png" alt="Arrow" class="navigation-arrows__left-arrow">
-                        <img src="/images/Stroke.png" alt="Stroke" class="navigation-arrows__item-stroke">
-                        <img src="/images/Dot.png" alt="Dot" class="navigation-arrows__item-dots">
-                        <img src="/images/Dot.png" alt="Dot" class="navigation-arrows__item-dots">
-                        <img src="/images/Dot.png" alt="Dot" class="navigation-arrows__item-dots">
-                        <img src="/images/Stroke.png" alt="Stroke" class="navigation-arrows__item-stroke"> 
-                        <img src="/images/Arrow.png" alt="Arrow" class="navigation-arrows__right-arrow">
+                        <img src="./images/Arrow.png" alt="Arrow" class="navigation-arrows navigation-arrows__left-arrow">
+                        <img src="./images/Stroke.png" alt="Stroke" class="navigation-arrows navigation-arrows__item-stroke">
+                        <div class="navigation-arrows dots"></div>
+                        <div class="navigation-arrows dots"></div>
+                        <div class="navigation-arrows dots"></div>
+                        <img src="./images/Stroke.png" alt="Stroke" class="navigation-arrows navigation-arrows__item-stroke"> 
+                        <img src="./images/Arrow.png" alt="Arrow" class="navigation-arrows navigation-arrows__right-arrow">
                     </div>     
                 </div>
                 <div class="container section-second-right">
                     <ul class="title yellow-subtitle">
-                        <li class="title yellow-subtitle__item active">Rostov-on-Don, Admiral</li>
-                        <li class="title yellow-subtitle__item">Sochi Thieves</li>
-                        <li class="title yellow-subtitle__item">Rostov-on-Don Patriotic</li>
+                        <li class="title yellow-subtitle__item active"><a href="#">Rostov-on-Don, Admiral</a></li>
+                        <li class="title yellow-subtitle__item active"><a href="#">Sochi Thieves</a></li>
+                        <li class="title yellow-subtitle__item active"><a href="#">Rostov-on-Don Patriotic</a></li>
                     </ul>
                     <img src="images/image2.png" width="672px" height="482px" alt="Image2">
                 </div>
             </div>
-            <div class="webcam-logo">
-                <h3 class="subtitle white-subtitle">online control</h3>
-                <img src="images/Rectangle1.png" alt="Rectangle1">
-                <img src="images/webcam.png" alt="webcam">
-                <img src="images/Rectangle1.png" alt="Rectangle1">
+            <div class="online-control">
+                <h3 class="title white-subtitle white-subtitle--online-control">online control</h3>               
+                <div class="title-icon title-icon--webcam"></div>
             </div>
         </section>
     </main>
