landing: 4 day - second part

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <main>
         <section class="section-first">
             <div class="container section-first-content">
-                <h1 class="title main-title">Turnkey Repair in the<br> 
+                <h1 class="title title--main">Turnkey Repair in the<br> 
                     city of <span class="city-name">Rostov-on-Don</span>
                 </h1>
                 <p class="introduction">Get ready-made turnkey repairs on time<br>
@@ -44,7 +44,7 @@
         <section class="section-second">
             <div class="container section-second-content">
                 <div class="container section-second-left">
-                    <h2 class="title title-large">completed<br>
+                    <h2 class="title title--large">completed<br>
                         projects
                     </h2>
                     <p class="description intro">Only a small part of the work performed our company is presented<br>
@@ -53,19 +53,19 @@
                     </p>
                     <div class="description description-columns">
                         <div class="description-columns__item">
-                            <h4 class="title title-small">city:</h4>
+                            <h5 class="title title--small">city:</h5>
                             <p class="description description-small-font">Rostov-on-Don<br> LCD admiral</p>
                         </div>
                         <div class="description-columns__item">                        
-                            <h4 class="title title-small">apartment area:</h4>
+                            <h5 class="title title--small">apartment area:</h5>
                             <p class="description description-small-font">81 m2</p>
                         </div>
                         <div class="description-columns__item">                       
-                            <h4 class="title title-small">Repair time:</h4>
+                            <h5 class="title title--small">Repair time:</h5>
                             <p class="description description-small-font">3.5 months</p>
                         </div>                        
                         <div class="description-columns__item">
-                            <h4 class="title title-small">Repair Cost:</h4>
+                            <h5 class="title title--small">Repair Cost:</h5>
                             <p class="description description-small-font">Upon request</p>
                         </div>
                     </div>
@@ -92,6 +92,94 @@
                 <h3 class="title white-subtitle white-subtitle--online-control">online control</h3>               
                 <div class="title-icon title-icon--webcam"></div>
             </div>
+        </section>
+        <section class="section-third">
+            <div class="container section-third-content">
+                <div class="video">
+                    <img src="./images/Video.png" widhh="817px" height="434px" alt="Video">
+                    <div class="play">
+                        <img class="play-button" src="./images/Ellipse.png" alt="Ellipse"> 
+                        <img class="play-button play-button--1" src="./images/Polygon.png" alt="Polygon">
+                    </div> 
+                    <div class="section-second-overlay"></div>                    
+                </div>                                                
+                <div>
+                    <hr class="border--1">
+                    <p class="description description--black-font description--black-font--video"> 
+                    At each facility, a camera is installed that broadcasts the progress of work on the<br>
+                    clock. At any time, you can go to our website and monitor the progress of work in <br>
+                    your apartment. You can watch the live broadcast from one of our facilities!<br>
+                    Leave a request below and you will receive a link to the broadcast.
+                    </p>
+                </div>
+                <form class="form form-third-section" action="#">
+                    <div class="input-text input-text--1">
+                        <div input-clue--1>
+                            <p>Name</p>
+                            <input type="text" placeholder="What is your name:">
+                        </div>
+                        <div input-clue--1>
+                            <p>Phone</p>                                                
+                            <input type="text" placeholder="Your phone number:">
+                        </div>
+                    </div>
+                    <input class="button button-submit" type="submit" value="Submit">               
+                </form>                    
+                <label class="description description--black-font description-checkbox--1">
+                    <input type="checkbox">I agree to the processing of personal data
+                </label> 
+                <h3 class="title subtitle--black">TYPES OF REPAIR</h3>
+                <div class="projects-demonstration">
+                    <div class="projects-images">
+                        <img src="./images/blueroom.jpg" alt="blueroom">
+                        <img src="./images/redroom.jpg" alt="blueroom">
+                        <img src="./images/darkroom.jpg" alt="blueroom">
+                    </div>   
+                    <div class="projects">
+                        <div class="projects__item">                        
+                            <h4 class="title subtitle--black title--small">Redecorating</h4>
+                            <ul>
+                                <li>Dismantling of old coatings</li>
+                                <li>Wallpapering</li>
+                                <li>Painting walls and ceilings</li>
+                                <li>Laying flooring</li>
+                                <li>Replacing plumbing</li>
+                                <li>Replacing sockets and switches</li>
+                                <li>Replacing doors</li>
+                            </ul>
+                        </div>                    
+                        <div class="projects__item">                        
+                            <h4 class="title subtitle--black title--small">Overhaul</h4>
+                            <ul>
+                                <li>Dismantling of old coatings</li>
+                                <li>Wallpapering</li>
+                                <li>Painting walls and ceilings</li>
+                                <li>Laying flooring</li>
+                                <li>Replacing plumbing</li>
+                                <li>Replacing sockets and switches</li>
+                                <li>Replacing doors</li>
+                            </ul>                        
+                        </div>
+                        <div class="projects__item">                        
+                            <h4 class="title subtitle--black title--small">Designer Repair</h4>
+                            <ul>
+                                <li>Dismantling of old coatings</li>
+                                <li>Wallpapering</li>
+                                <li>Painting walls and ceilings</li>
+                                <li>Laying flooring</li>
+                                <li>Replacing plumbing</li>
+                                <li>Replacing sockets and switches</li>
+                                <li>Replacing doors</li>
+                            </ul>
+                        </div>
+                    </div> 
+                    <div class="projects-prices">                        
+                        <p class="prices__item">from 900 rub / m2</p>
+                        <p class="prices__item">from 1800 rub / m2</p>
+                        <p class="prices__item">from 4000 rub / m2</p>
+                    </div>                    
+                </div>
+            </div>           
         </section>
     </main>
     <footer></footer>
