landing:second part - done

--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
                 </div>
             </div>
             <div class="online-control">
-                <h3 class="title white-subtitle white-subtitle--online-control">online control</h3>               
-                <div class="title-icon title-icon--webcam"></div>
+                <h3 class="title white-subtitle white-subtitle--online-control">online control</h3>             
             </div>
+            <div class="title-icon title-icon--webcam"></div>
         </section>
         <section class="section-third">
             <div class="container section-third-content">
@@ -114,21 +114,25 @@
                 </div>
                 <form class="form form-third-section" action="#">
                     <div class="input-text input-text--1">
-                        <div input-clue--1>
-                            <p>Name</p>
+                        <div class="input-clue--1">
+                            <p class="description description-clue">Name</p>
                             <input type="text" placeholder="What is your name:">
+                            <div class="input-underline"></div>
                         </div>
-                        <div input-clue--1>
-                            <p>Phone</p>                                                
+                        <div class="input-clue--1">
+                            <p class="description description-clue">Phone</p>                                                
                             <input type="text" placeholder="Your phone number:">
+                            <div class="input-underline"></div>
                         </div>
                     </div>
                     <input class="button button-submit" type="submit" value="Submit">               
                 </form>                    
-                <label class="description description--black-font description-checkbox--1">
-                    <input type="checkbox">I agree to the processing of personal data
+                <label class="description description--black-font description-checkbox">
+                    <input type="checkbox">
+                    <span>I agree to the processing of personal data</span>
                 </label> 
-                <h3 class="title subtitle--black">TYPES OF REPAIR</h3>
+                <h3 class="title subtitle--black subtitle--black1">TYPES OF REPAIR</h3>
+                <div class="title-icon title-icon--instruments"></div>
                 <div class="projects-demonstration">
                     <div class="projects-images">
                         <img src="./images/blueroom.jpg" alt="blueroom">
