landing: mobile version for < 1300px done

--- a/index.html
+++ b/index.html
@@ -131,7 +131,11 @@
                                 <div class="input-underline"></div>
                             </div>
                         </div>
-                        <input class="button button-submit button-submit--1" type="submit" value="Submit"> 
+                        <label class="description description-checkbox-mobile checkbox-mobile--1">
+                            <input type="checkbox">
+                            <span>I agree to the processing of personal data</span>
+                        </label>                        
+                        <input class="button button-submit button-submit--1" type="submit" value="Submit">    
                     </div>
                     <label class="description description--black-font description-checkbox checkbox--1">
                         <input type="checkbox">
@@ -411,12 +415,13 @@
                             </div>                               
                         </div> 
                     </form>                                                         
-                    <label class="description description-checkbox checkbox--1">
+                    <label class="description description-checkbox checkbox--3">
                         <input type="checkbox">
                         <span>I agree to the processing of personal data</span>
                     </label>
                     <input class="button button-submit button-submit--3" type="submit" value="Submit">                     
-                </div>  
+                </div>
+                <div class="map-for-mobile"></div> 
                 <div class="title middle-title-common title--address">
                     Rostov-on-Don, Nansen St., 239 Shopping Center<br> Decorum Tel +7 (928) 768 32 29
                 </div>
